Added font to the about page

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -60,7 +60,7 @@
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div class="center divcenter row clearfix commonheight leftmargin-sm">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="babag"></div>
                                             <div class="heroimage"></div>
@@ -114,7 +114,7 @@
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">FrontEnd Agility</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;"> Our RESTful modelling allows all incubated products to have multiple front ends. Responsive Layouts ensure that our web pages remain app first.</p>
+                                                <p style="text-align:left;font-family: 'Cardo', serif;"> Our RESTful modelling allows all incubated products to have multiple front ends. Responsive Layouts ensure that our web pages remain app first.</p>
                                             </div>
                                         </div>
 
@@ -125,7 +125,7 @@
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Test Driven</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;">Our focuss on TDD, continous integration, automated behavioural tests and developer testing ensure that all efforts stay focused and stack up without regression. </p>
+                                                <p style="text-align:left;font-family: 'Cardo', serif;">Our focuss on TDD, continous integration, automated behavioural tests and developer testing ensure that all efforts stay focused and stack up without regression. </p>
                                             </div>
                                         </div>
 
@@ -136,7 +136,7 @@
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">World Class DevOps</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;">Prod like development containers. Continous Integration and auto deployed staging environments. 12-factor friendly scalable, secure & reliable cloud environments. </p>
+                                                <p style="text-align:left;font-family: 'Cardo', serif;">Prod like development containers. Continous Integration and auto deployed staging environments. 12-factor friendly scalable, secure & reliable cloud environments. </p>
                                             </div>
                                         </div>
 
@@ -149,7 +149,7 @@
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Presentation Centered</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;">Choose help on visual assets, imagery & videography along with context specific content and copy from a wide spectrum of external collaborators.</p>
+                                                <p style="text-align:left;font-family: 'Cardo', serif;">Choose help on visual assets, imagery & videography along with context specific content and copy from a wide spectrum of external collaborators.</p>
                                             </div>
                                         </div>
 
@@ -160,7 +160,7 @@
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Complete Control</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;">Organize and Manage Production Data; Realtime system analyses. Expert SEO and SEM. A/B & Experiment based decision making.</p>
+                                                <p style="text-align:left;font-family: 'Cardo', serif;">Organize and Manage Production Data; Realtime system analyses. Expert SEO and SEM. A/B & Experiment based decision making.</p>
                                             </div>
                                         </div>
 
@@ -171,7 +171,7 @@
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Agile Teams</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;">Pair programming. Pace and goal based staffing. Transparency in work.</p>
+                                                <p style="text-align:left;font-family: 'Cardo', serif;">Pair programming. Pace and goal based staffing. Transparency in work.</p>
                                             </div>
                                         </div>
                                     </div>
