Added rails_12factor app

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -85,7 +85,13 @@
 
                                         <a id="babag-who" class="button button-large button-border button-rounded tright" style="float: right; right: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">Who?</b></a>
                                         <p id="babag-who-answer" style='float: right; right: 20%; display:none;color:black'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
+                                            <br> foo bar foo bar
+                                        </p>
+                                        <br><br><br><br><br><br>
+                                        <i class="col-sm-1 icon-facebook-sign" style="font-size:50px;color:#3b5998"></i>
+                                        <i class="col-sm-1 fa fa-whatsapp" style="font-size:50px;color:#34af23"></i>
+
+
                                     </div>
                                 </div>
                             </div>
