Adeed faccebook and whatsapp icons

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -88,8 +88,8 @@
                                             <br> foo bar foo bar
                                         </p>
                                         <br><br><br><br><br><br>
-                                        <i class="col-sm-1 icon-facebook-sign" style="font-size:50px;color:#3b5998"></i>
-                                        <i class="col-sm-1 fa fa-whatsapp" style="font-size:50px;color:#34af23"></i>
+                                        <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:50px;color:#3b5998"></i></a>
+                                        <i class="col fa fa-whatsapp" style="font-size:50px;color:#34af23"></i>
 
 
                                     </div>
