Fixed the footer bug

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -333,11 +333,11 @@
                             </div>
                         </div>
 
-                        <div id="footer" class="footer" style="margin-top:95vh;">
+                        <footer style="margin-top:95vh;">
                             <div class="col_full center nomargin nopadding" style="font-size: .9em">
                                 <i>Copyright - IdeaPortal Services Pvt Ltd - 2017</i>
                             </div>
-                        </div>
+                        </footer>
                     </div>
                 </section>
             </div>
