--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -79,11 +79,11 @@
                                         <p id="babag-what-answer" style='float: left; left: 10%; display:none;color:black;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="babag-why" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Why?</b></a>
+                                        <button id="babag-why" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Why?</b></button>>
                                         <p id="babag-why-answer" style='margin-left: auto;margin-right: auto; display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="babag-who" class="button button-large button-border button-rounded tright" style="float: right; right: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">Who?</b></a>
+                                        <button id="babag-who" class="button button-large button-border button-rounded tright" style="float: right; right: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">Who?</b></button>>
                                         <p id="babag-who-answer" style='float: right; right: 20%; display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar
                                         </p>
@@ -272,15 +272,15 @@
                                         <br>
                                         <br>
 
-                                        <a id="careers1" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto;"><b style="text-align:center;">Developer</b></a>
+                                        <button id="careers1" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto;"><b style="text-align:center;">Developer</b></button>>
                                         <p id="careers1-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers2" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Editor</b></a>
+                                        <button id="careers2" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Editor</b></button>>
                                         <p id="careers2-answer" style='display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers3" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto"><b style="text-align:center;">Operations</b></a>
+                                        <button id="careers3" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto"><b style="text-align:center;">Operations</b></button>>
                                         <p id="careers3-answer" style='display:none;color:black;float: right; right: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
@@ -290,15 +290,15 @@
                                         <br>
                                         <br>
 
-                                        <a id="careers4" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto"><b style="text-align:center;">Copy Editor</b></a>
+                                        <button id="careers4" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto"><b style="text-align:center;">Copy Editor</b></button>>
                                         <p id="careers4-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers5" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 30px"><b style="text-align:center;">Designer</b></a>
+                                        <button id="careers5" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 30px"><b style="text-align:center;">Designer</b></button>>
                                         <p id="careers5-answer" style='display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 30px"><b style="text-align:center;">Animator</b></a>
+                                        <button id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 30px"><b style="text-align:center;">Animator</b></button>>
                                         <p id="careers6-answer" style='display:none;color:black;float: right; right: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
