--- a/app/assets/stylesheets/feature-box.css
+++ b/app/assets/stylesheets/feature-box.css
@@ -40,7 +40,7 @@
 
 .feature-box h3 {
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-bottom: 0;
@@ -49,7 +49,7 @@
 
 .feature-box p {
   margin: 8px 0 0 0;
-  color: #999;
+  color: #686868 !important;
 }
 
 .feature-box .before-heading { font-size: 14px; }
