--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -77,21 +77,58 @@
                                         <br>
                                         <br>
 
-                                        <button id="babag-what" class="button button-large button-border button-rounded tright" style="float: left; left: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;"data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">What?</b></button>
-                                        <p id="babag-what-answer" style='float: left; left: 10%; display:none;color:black;'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
+                                            <div id="1" style="width: 33%;float: left">
+                                           <!--  <button id="babag-what" class="button button-large button-border button-rounded tright" style="float: left; left: 10%; width: auto; padding: 0px 43px"><b>What?</b></button>
+                                            <div id="babag-what-answer" style='float: left; margin-left: 10%; display:none;color:black;'>
+                                              <p>
+                                                  foo foo bar bar<br> foo bar foo bar
+                                              </p>
+                                            </div> -->
+                                             <button id="babag-what" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>What?</b></button>
+                                            <div id="babag-what-answer" style='display:none;color:black;'>
+                                              <p>
+                                                  foo foo bar bar<br> foo bar foo bar
+                                              </p>
+                                            </div>
+                                            </div>
+                                            <!--  -->
+                                            <div id="2" style="width: 33%;float: left">
+                                           <!--  <button id="babag-why" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Why?</b></button>
 
-                                        <button id="babag-why" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Why?</b></button>>
-                                        <p id="babag-why-answer" style='margin-left: auto;margin-right: auto; display:none;color:black'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
+                                            <div id="babag-why-answer" style='display:none;color:black;'>
+                                              <p >
+                                                  foo foo bar bar<br> foo bar foo bar
+                                              </p>
+                                            </div> -->
+                                             <button id="babag-why" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>Why?</b></button>
 
-                                        <button id="babag-who" class="button button-large button-border button-rounded tright" style="float: right; right: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">Who?</b></button>>
-                                        <p id="babag-who-answer" style='float: right; right: 20%; display:none;color:black'>foo foo bar bar
-                                            <br> foo bar foo bar
-                                        </p>
+                                            <div id="babag-why-answer" style='display:none;color:black;'>
+                                              <p >
+                                                  foo foo bar bar<br> foo bar foo bar
+                                              </p>
+                                            </div>
+                                            </div>
+                                            <!--  -->
+                                            <div id='3' style="width: 33%;float: left">
+                                            <!-- <button id="babag-who" class="button button-large button-border button-rounded tright" style="float: right; right: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">Who?</b></button>
+
+                                            <div id="babag-who-answer" style='display:none;color:black;float: right; margin-right: 10%;'>
+                                              <p ">
+                                                  foo foo bar bar<br> foo bar foo bar
+                                              </p>
+                                            </div> -->
+
+                                            <button id="babag-who" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>Who?</b></button>
+
+                                            <div id="babag-who-answer" style='display:none;color:black;'>
+                                              <p ">
+                                                  foo foo bar bar<br> foo bar foo bar
+                                              </p>
+                                            </div>
+                                            </div>
                                         <br><br><br><br><br><br>
-                                        <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:50px;color:#3b5998"></i></a>
-                                        <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:50px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
+                                        <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
+                                        <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
 
 
                                     </div>
