--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -77,43 +77,41 @@
                                         <br>
                                         <br>
 
-                                            <div id="1" style="width: 33%;float: left">
-                                               <button id="babag-what" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>What?</b></button>
-                                                <div id="babag-what-answer" style='display:none;color:black;'>
-                                                  <p>
-                                                    foo foo bar bar<br> foo bar foo bar
-                                                  </p>
-                                                </div>
+                                        <div id="1" style="width: 33%;float: left">
+                                           <button id="babag-what" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>What?</b></button>
+                                            <div id="babag-what-answer" style='display:none;color:black;'>
+                                              <p>
+                                                foo foo bar bar<br> foo bar foo bar
+                                              </p>
                                             </div>
-                                            <!--  -->
-                                            <div id="2" style="width: 33%;float: left">
-                                              <button id="babag-why" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>Why?</b></button>
+                                        </div>
+                                        <!--  -->
+                                        <div id="2" style="width: 33%;float: left">
+                                          <button id="babag-why" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>Why?</b></button>
 
-                                              <div id="babag-why-answer" style='display:none;color:black;'>
-                                                <p >
-                                                  foo foo bar bar<br> foo bar foo bar
-                                                </p>
-                                              </div>
-                                            </div>
-                                            <!--  -->
-                                            <div id='3' style="width: 33%;float: left">
+                                          <div id="babag-why-answer" style='display:none;color:black;'>
+                                            <p >
+                                              foo foo bar bar<br> foo bar foo bar
+                                            </p>
+                                          </div>
+                                        </div>
+                                        <!--  -->
+                                        <div id='3' style="width: 33%;float: left">
 
-                                              <button id="babag-who" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>Who?</b></button>
+                                          <button id="babag-who" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 43px"><b>Who?</b></button>
 
-                                              <div id="babag-who-answer" style='display:none;color:black;'>
-                                                <p ">
-                                                    foo foo bar bar<br> foo bar foo bar
-                                                </p>
-                                              </div>
-                                            </div>
+                                          <div id="babag-who-answer" style='display:none;color:black;'>
+                                            <p ">
+                                                foo foo bar bar<br> foo bar foo bar
+                                            </p>
+                                          </div>
+                                        </div>
 
-                                        <br><br><br><br><br><br>
-                                        <div style="float:right; margin-right:10%; margin-top: 70px">
+                                        <br><br><br><br><br><br><br><br><br><br>
+                                        <div style="float:right; margin-right:5%;">
                                           <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
                                           <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
                                         </div>
-
-
                                     </div>
                                 </div>
                             </div>
