--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -107,8 +107,8 @@
                                           </div>
                                         </div>
 
-                                        <br><br><br><br><br><br><br><br><br><br>
-                                        <div style="float:right; margin-right:5%;">
+
+                                        <div style="float:right; margin-top:23vh;margin-right: 10vw">
                                           <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
                                           <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
                                         </div>
