Changed the placement of buttons to be below the namma smart friend

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -60,14 +60,17 @@
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm">
+                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style="pointer-events:auto !important; ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="babag"></div>
                                             <div class="heroimage"></div>
                                             <b style="text-align: right; font-size: 50px">BabaG</b><br><i style="text-align: center; font-size: 35px;font-family: 'Cantarell', sans-serif;">Namma smart friend!</i>
                                             <br>
-
+                                            <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
+                                          <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
                                         </h2>
+
+
                                     </div>
                                 </div>
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
@@ -105,12 +108,6 @@
                                                 foo foo bar bar<br> foo bar foo bar
                                             </p>
                                           </div>
-                                        </div>
-
-
-                                        <div style="float:right; margin-top:21vh;margin-right: 7vw">
-                                          <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
-                                          <a href="#baba"><i class="col fa fa-whatsapp" style="font-size:30px;color:#34af23" data-toggle="popover" data-placement="top" data-content="Send us a hi on 733-832-2224 to get started"></i></a>
                                         </div>
                                     </div>
                                 </div>
