Removed the pointer events auto on the babag page

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -60,7 +60,7 @@
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style="pointer-events:auto !important; ">
+                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="babag"></div>
                                             <div class="heroimage"></div>
@@ -288,6 +288,7 @@
 
                                         <br>
                                         <br>
+
 
                                         <button id="careers1" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto;"><b style="text-align:center;">Developer</b></button>>
                                         <p id="careers1-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
