--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -286,39 +286,55 @@
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
 
+                                        <div style="width: 33%;float: left">
+                                            <button id="careers1" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto;"><b style="text-align:center;">Developer</b></button>
+                                            <p id="careers1-answer" style='display:none;color:black;'>foo foo bar bar
+                                                <br> foo bar foo bar
+                                            </p>
+                                        </div>
+                                        <div style="width: 33%;float: left">
+                                            <button id="careers2" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Editor</b></button>>
+                                            <p id="careers2-answer" style='display:none;color:black'>
+                                                foo foo bar bar
+                                                <br> foo bar foo bar
+                                            </p>
+                                        </div>
+                                        <div style="width: 33%;float: right;">
+                                            <button id="careers3" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto"><b style="text-align:center;">Operations</b></button>>
+                                            <p id="careers3-answer" style='display:none;color:black;'>
+                                                foo foo bar bar
+                                                <br> foo bar foo bar
+                                            </p>
+                                        </div>
+
                                         <br>
                                         <br>
-
-
-                                        <button id="careers1" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto;"><b style="text-align:center;">Developer</b></button>>
-                                        <p id="careers1-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
-
-                                        <button id="careers2" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Editor</b></button>>
-                                        <p id="careers2-answer" style='display:none;color:black'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
-
-                                        <button id="careers3" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto"><b style="text-align:center;">Operations</b></button>>
-                                        <p id="careers3-answer" style='display:none;color:black;float: right; right: 15%;'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
-
                                         <br>
                                         <br>
                                         <br>
                                         <br>
                                         <br>
-
-                                        <button id="careers4" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto"><b style="text-align:center;">Copy Editor</b></button>>
-                                        <p id="careers4-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
-
-                                        <button id="careers5" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 30px"><b style="text-align:center;">Designer</b></button>>
-                                        <p id="careers5-answer" style='display:none;color:black'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
-
-                                        <button id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 30px"><b style="text-align:center;">Animator</b></button>>
-                                        <p id="careers6-answer" style='display:none;color:black;float: right; right: 15%;'>foo foo bar bar
-                                            <br> foo bar foo bar</p>
+                                        <div style="width: 33%;float: left">
+                                            <button id="careers4" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto"><b style="text-align:center;">Copy Editor</b></button>>
+                                            <p id="careers4-answer" style='display:none;color:black;'>
+                                                foo foo bar bar
+                                                <br> foo bar foo bar
+                                            </p>
+                                        </div>
+                                        <div style="width: 33%;float: left">
+                                            <button id="careers5" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 30px"><b style="text-align:center;">Designer</b></button>>
+                                            <p id="careers5-answer" style='display:none;color:black'>
+                                                foo foo bar bar
+                                                <br> foo bar foo bar
+                                            </p>
+                                        </div>
+                                        <div style="width: 33%;float: right;">
+                                            <button id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 30px"><b style="text-align:center;">Animator</b></button>>
+                                            <p id="careers6-answer" style='display:none;color:black;'>
+                                                foo foo bar bar
+                                                <br> foo bar foo bar
+                                            </p>
+                                        </div>
 
                                     </div>
 
