Almost almost fixed Careers buttons

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -329,7 +329,7 @@
                                             </p>
                                         </div>
                                         <div style="width: 33%;float: right;">
-                                            <button id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 30px"><b style="text-align:center;">Animator</b></button>>
+                                            <button id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 34px"><b style="text-align:center;">Animator</b></button>>
                                             <p id="careers6-answer" style='display:none;color:black;'>
                                                 foo foo bar bar
                                                 <br> foo bar foo bar
@@ -424,7 +424,7 @@
                     $('#babag-what-answer').show(1000);
                 })
                 $('#babag-what-answer').click(function() {
-                    $('#babag-what-answer').hide(1000);
+                    $('#babag-what-answer').hide();
                     $('#babag-what').show();
                 })
                 $('#babag-why').click(function() {
@@ -432,7 +432,7 @@
                     $('#babag-why-answer').show(1000);
                 })
                 $('#babag-why-answer').click(function() {
-                    $('#babag-why-answer').hide(1000);
+                    $('#babag-why-answer').hide();
                     $('#babag-why').show();
                 })
                 $('#babag-who').click(function() {
@@ -440,7 +440,7 @@
                     $('#babag-who-answer').show(1000);
                 })
                 $('#babag-who-answer').click(function() {
-                    $('#babag-who-answer').hide(1000);
+                    $('#babag-who-answer').hide();
                     $('#babag-who').show();
                 })
                 $('#careers1').click(function() {
@@ -448,7 +448,7 @@
                     $('#careers1-answer').show(1000);
                 })
                 $('#careers1-answer').click(function() {
-                    $('#careers1-answer').hide(1000);
+                    $('#careers1-answer').hide();
                     $('#careers1').show();
                 })
                 $('#careers2').click(function() {
@@ -456,7 +456,7 @@
                     $('#careers2-answer').show(1000);
                 })
                 $('#careers2-answer').click(function() {
-                    $('#careers2-answer').hide(1000);
+                    $('#careers2-answer').hide();
                     $('#careers2').show();
                 })
                 $('#careers3').click(function() {
@@ -464,7 +464,7 @@
                     $('#careers3-answer').show(1000);
                 })
                 $('#careers3-answer').click(function() {
-                    $('#careers3-answer').hide(1000);
+                    $('#careers3-answer').hide();
                     $('#careers3').show();
                 })
                 $('#careers4').click(function() {
@@ -472,7 +472,7 @@
                     $('#careers4-answer').show(1000);
                 })
                 $('#careers4-answer').click(function() {
-                    $('#careers4-answer').hide(1000);
+                    $('#careers4-answer').hide();
                     $('#careers4').show();
                 })
                 $('#careers5').click(function() {
@@ -480,7 +480,7 @@
                     $('#careers5-answer').show(1000);
                 })
                 $('#careers5-answer').click(function() {
-                    $('#careers5-answer').hide(1000);
+                    $('#careers5-answer').hide();
                     $('#careers5').show();
                 })
                 $('#careers6').click(function() {
@@ -488,7 +488,7 @@
                     $('#careers6-answer').show(1000);
                 })
                 $('#careers6-answer').click(function() {
-                    $('#careers6-answer').hide(1000);
+                    $('#careers6-answer').hide();
                     $('#careers6').show();
                 })
             });
